--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	</head>
 
 	<body>
-		<h1>Luz do Fim da Pândemia</h1>
+		<h1>Luz do Fim da Pandemia</h1>
 		<div class="grid">
 			<div class="grid-item">
 				<img src="./assets/images/1A.jpg">
