--- a/index.html
+++ b/index.html
@@ -5,26 +5,34 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Luz no fim da pandemia</title>
 		<meta name="”description”" content="”Exposição" />
-		<link href="./assets/normalize.css" rel="stylesheet" type="text/css" />
-
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="https://masonry.desandro.com/masonry.pkgd.js"></script>
 
 		<style>
-			* { box-sizing: border-box; }
+			* {
+				box-sizing: border-box;
+				margin-left:auto;
+				margin-right:auto;
+			}
 
 			body {
 				font-family: sans-serif;
-				padding: 10% 5%;
+				width:100%;
 			}
 
 			h1 {
 				text-align:center;
+				padding: 5% 0;
+				text-transform: uppercase;
+				font-size: 7vw;
 			}
 
 			/* ---- grid ---- */
 			.grid {
-				max-width: 100vw;
+				text-align:center;
+				width: 100vw;
+				align-items: center;
+				display: flex;
 			}
 
 			/* clearfix */
@@ -57,6 +65,16 @@
 			.grid-item h2{
 				width: 100%;
 				text-align: center;
+			}
+
+			@media (max-width: 768px) {
+			/* CSS */
+				.grid-item img {
+					max-width: 100vw;
+					margin: 3%;
+					height: auto !important;
+					border: red solid 1px;
+				}
 			}
 		</style>
 	</head>
