--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	</head>
 
 	<body>
-		<iframe width="0" height="0" src="https://www.youtube.com/embed/GH5v7oIL_jc?controls=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture encrypted-media" allowfullscreen></iframe>
+		<iframe width="0" height="0" src="https://www.youtube.com/embed/8_Jw417WdF0?controls=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture encrypted-media" allowfullscreen></iframe>
 		<h1>Luz do Fim da Pandemia</h1>
 		<div class="grid">
 			<div class="grid-item">
