--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
 		<meta name="”description”" content="”Exposição" />
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="https://masonry.desandro.com/masonry.pkgd.js"></script>
-
+		<script>
+			document.addEventListener("DOMContentLoaded", function(event) {
+				var elem = document.querySelector('.grid');
+				var msnry = new Masonry( elem, {
+					// options
+					columnWidth: '.grid-item',
+					itemSelector: '.grid-item',
+					percentPosition: true
+				});
+			});
+		</script>
 		<style>
 			* {
 				box-sizing: border-box;
@@ -68,18 +78,61 @@
 			}
 
 			@media (max-width: 768px) {
-			/* CSS */
+				/* CSS */
+				.grid {
+					max-width: fit-content;
+
+				}
 				.grid-item img {
 					max-width: 100vw;
 					margin: 3%;
 					height: auto !important;
 				}
 			}
+			.social {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+			}
+
+			.social a  {
+				color: black;
+		   		font-weight: 700;
+				font-family: sans-serif;
+				width: fit-content;
+				display: flex;
+				align-items: center;
+				margin: 10px;
+			}
+			.social a svg {
+				width: fit-content;
+				display: flex;
+				align-items: center;
+				margin: 10px;
+			}
 		</style>
 	</head>
 
 	<body>
 		<iframe width="0" height="0" src="https://www.youtube.com/embed/8_Jw417WdF0?controls=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture encrypted-media" allowfullscreen></iframe>
+			<div class="social">
+			<a href="https://www.instagram.com/gricioariel/">
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 169.063 169.063" style="width: 20px;">
+					<defs/>
+					<path d="M122.406 0H46.654C20.929 0 0 20.93 0 46.655v75.752c0 25.726 20.929 46.655 46.654 46.655h75.752c25.727 0 46.656-20.93 46.656-46.655V46.655C169.063 20.93 148.133 0 122.406 0zm31.657 122.407c0 17.455-14.201 31.655-31.656 31.655H46.654C29.2 154.063 15 139.862 15 122.407V46.655C15 29.201 29.2 15 46.654 15h75.752c17.455 0 31.656 14.201 31.656 31.655v75.752z"/>
+					<path d="M84.531 40.97c-24.021 0-43.563 19.542-43.563 43.563 0 24.02 19.542 43.561 43.563 43.561s43.563-19.541 43.563-43.561c0-24.021-19.542-43.563-43.563-43.563zm0 72.123c-15.749 0-28.563-12.812-28.563-28.561 0-15.75 12.813-28.563 28.563-28.563s28.563 12.813 28.563 28.563c0 15.749-12.814 28.561-28.563 28.561zM129.921 28.251c-2.89 0-5.729 1.17-7.77 3.22-2.051 2.04-3.23 4.88-3.23 7.78 0 2.891 1.18 5.73 3.23 7.78 2.04 2.04 4.88 3.22 7.77 3.22 2.9 0 5.73-1.18 7.78-3.22 2.05-2.05 3.22-4.89 3.22-7.78 0-2.9-1.17-5.74-3.22-7.78-2.04-2.05-4.88-3.22-7.78-3.22z"/>
+				</svg>
+				Ariel Gricio
+			</a>
+			<a href="https://www.instagram.com/ligiachaim/">
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 169.063 169.063" style="width: 20px;">
+					<defs/>
+					<path d="M122.406 0H46.654C20.929 0 0 20.93 0 46.655v75.752c0 25.726 20.929 46.655 46.654 46.655h75.752c25.727 0 46.656-20.93 46.656-46.655V46.655C169.063 20.93 148.133 0 122.406 0zm31.657 122.407c0 17.455-14.201 31.655-31.656 31.655H46.654C29.2 154.063 15 139.862 15 122.407V46.655C15 29.201 29.2 15 46.654 15h75.752c17.455 0 31.656 14.201 31.656 31.655v75.752z"/>
+					<path d="M84.531 40.97c-24.021 0-43.563 19.542-43.563 43.563 0 24.02 19.542 43.561 43.563 43.561s43.563-19.541 43.563-43.561c0-24.021-19.542-43.563-43.563-43.563zm0 72.123c-15.749 0-28.563-12.812-28.563-28.561 0-15.75 12.813-28.563 28.563-28.563s28.563 12.813 28.563 28.563c0 15.749-12.814 28.561-28.563 28.561zM129.921 28.251c-2.89 0-5.729 1.17-7.77 3.22-2.051 2.04-3.23 4.88-3.23 7.78 0 2.891 1.18 5.73 3.23 7.78 2.04 2.04 4.88 3.22 7.77 3.22 2.9 0 5.73-1.18 7.78-3.22 2.05-2.05 3.22-4.89 3.22-7.78 0-2.9-1.17-5.74-3.22-7.78-2.04-2.05-4.88-3.22-7.78-3.22z"/>
+				</svg>
+				Ligia Chaim
+			</a>
+		</div>
 		<h1>Luz do Fim da Pandemia</h1>
 		<div class="grid">
 			<div class="grid-item">
@@ -138,14 +191,5 @@
 				<h2>Do desejo do encontro ao medo da desconstrução da idealização.</h2>
 			</div>
 		</div>
-		<script>
-			var elem = document.querySelector('.grid');
-			var msnry = new Masonry( elem, {
-				// options
-				columnWidth: '.grid-item',
-				itemSelector: '.grid-item',
-				percentPosition: true
-			});
-		</script>
 	</body>
 </html>
