improve loading libs

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 		<title>Luz no fim da pandemia</title>
 		<meta name="”description”" content="”Exposição" />
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-		<script src="https://masonry.desandro.com/masonry.pkgd.js"></script>
-
+		<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 		<style>
 			* {
 				box-sizing: border-box;
