--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				.grid-item img {
 					max-width: 100vw;
 					margin: 3%;
-					height: auto !important;
+					/* height: auto !important; */
 				}
 			}
 			.social {
