--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="”description”" content="”Exposição" />
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+
 		<style>
 			* {
 				box-sizing: border-box;
@@ -69,13 +70,13 @@
 			@media (max-width: 768px) {
 				/* CSS */
 				.grid {
-					max-width: fit-content;
+					/* max-width: fit-content; */
 
 				}
 				.grid-item img {
 					max-width: 100vw;
 					margin: 3%;
-					/* height: auto !important; */
+					height: auto !important;
 				}
 			}
 			.social {
@@ -100,11 +101,12 @@
 				margin: 10px;
 			}
 		</style>
+
 	</head>
 
 	<body>
 		<iframe width="0" height="0" src="https://www.youtube.com/embed/8_Jw417WdF0?controls=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture encrypted-media" allowfullscreen></iframe>
-			<div class="social">
+		<div class="social">
 			<a href="https://www.instagram.com/gricioariel/">
 				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 169.063 169.063" style="width: 20px;">
 					<defs/>
@@ -122,6 +124,7 @@
 				Ligia Chaim
 			</a>
 		</div>
+
 		<h1>Luz do Fim da Pandemia</h1>
 		<div class="grid">
 			<div class="grid-item">
@@ -180,7 +183,7 @@
 				<h2>Do desejo do encontro ao medo da desconstrução da idealização.</h2>
 			</div>
 		</div>
-		<script>
+	<script>
 			$('.grid').masonry({
 				// options
 				columnWidth: '.grid-item',
