--- a/index.html
+++ b/index.html
@@ -7,14 +7,7 @@
 		<meta name="”description”" content="”Exposição" />
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
-	<script>
-			$('.grid').masonry({
-				// options
-				columnWidth: '.grid-item',
-				itemSelector: '.grid-item',
-				percentPosition: true
-			});
-		</script>
+
 		<style>
 			* {
 				box-sizing: border-box;
@@ -190,6 +183,15 @@
 				<h2>Do desejo do encontro ao medo da desconstrução da idealização.</h2>
 			</div>
 		</div>
-
+		<script>
+			$( document ).ready(function() {
+				$('.grid').masonry({
+					// options
+					columnWidth: '.grid-item',
+					itemSelector: '.grid-item',
+					percentPosition: true
+				});
+			});
+		</script>
 	</body>
 </html>
