--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Luz no fim da pandemia</title>
 		<meta name="”description”" content="”Exposição" />
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-		<script src="https://unpkg.com/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"></script>
+		<script async src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script async src="https://unpkg.com/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"></script>
 		<style>
 			* {
 				box-sizing: border-box;
@@ -181,7 +181,7 @@
 				<h2>Do desejo do encontro ao medo da desconstrução da idealização.</h2>
 			</div>
 		</div>
-	<script>
+		<script defer>
 		    $('.grid').masonry({
 				// options
 				columnWidth: '.grid-item',
