--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="”description”" content="”Exposição" />
 		<script async src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script async src="https://unpkg.com/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"></script>
+		<script defer src="./assets/scripts.js"></script>
 		<style>
 			* {
 				box-sizing: border-box;
@@ -181,13 +182,5 @@
 				<h2>Do desejo do encontro ao medo da desconstrução da idealização.</h2>
 			</div>
 		</div>
-		<script defer>
-		    $('.grid').masonry({
-				// options
-				columnWidth: '.grid-item',
-				itemSelector: '.grid-item',
-				percentPosition: true
-			});
-		</script>
 	</body>
 </html>
