--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="”description”" content="”Exposição" />
 		<script async src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script async src="https://unpkg.com/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"></script>
-		<script defer src="./assets/scripts.js"></script>
+		<script async src="./assets/scripts.js"></script>
 		<style>
 			* {
 				box-sizing: border-box;
