move scripts to footer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="”description”" content="”Exposição" />
 		<script async src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script async src="https://unpkg.com/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"></script>
-		<script async src="./assets/scripts.js"></script>
+
 		<link rel="stylesheet" href="./assets/main.css">
 	<body>
 		<iframe width="0" height="0" src="https://www.youtube.com/embed/I1-1GQAg54I?controls=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture encrypted-media" allowfullscreen></iframe>
@@ -88,5 +88,6 @@
 				<h2>Do desejo do encontro ao medo da desconstrução da idealização.</h2>
 			</div>
 		</div>
+		<script src="./assets/scripts.js"></script>
 	</body>
 </html>
