--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Luz no fim da pandemia</title>
 		<meta name="”description”" content="”Exposição" />
-		<script async src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-		<script async src="https://unpkg.com/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"></script>
-
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="https://unpkg.com/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"></script>
 		<link rel="stylesheet" href="./assets/main.css">
 	<body>
 		<iframe width="0" height="0" src="https://www.youtube.com/embed/I1-1GQAg54I?controls=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture encrypted-media" allowfullscreen></iframe>
