Try fix to footer

--- a/index.html
+++ b/index.html
@@ -85,7 +85,24 @@
 				<h2>Do desejo do encontro ao medo da desconstrução da idealização.</h2>
 			</div>
 		</div>
-		<script src="./assets/scripts.js"></script>
 		<iframe width="0" height="0" src="https://www.youtube.com/embed/I1-1GQAg54I?controls=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture encrypted-media" allowfullscreen></iframe>
+		<script>
+			$(document).ready(function(){
+				 $('img').load(function(){
+					$('.grid').masonry({
+						// options
+						columnWidth: '.grid-item',
+						itemSelector: '.grid-item',
+						percentPosition: true
+					});
+				});
+				$('.grid').masonry({
+					// options
+					columnWidth: '.grid-item',
+					itemSelector: '.grid-item',
+					percentPosition: true
+				});
+			});
+		</script>
 	</body>
 </html>
